gcc/testsuite/rust/rustc/ui/const-generics/min_const_generics/default_trait_param.rs
#![feature(min_const_generics)]

trait Foo<const KIND: bool = true> {}
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

